--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -81,12 +81,11 @@ h2{
     text-align: justify;
     -ms-text-justify: distribute-all-lines;
     text-justify: distribute-all-lines;
-    display: table;
+    display: flex;
 }
 
 
 .link_photos{
-    display: table-cell;
     padding-bottom: 125px;
 }
 
@@ -94,7 +93,7 @@ h2{
     padding-top: 125px;
     position: relative;
     float: center;
-    width: 300px;
+    width: 500px;
     max-width: 100%;
     height: auto;
     background-position: 50% 50%;
@@ -109,18 +108,6 @@ h2{
     box-shadow: 0px 5px 0   0px #ccc; 
 }
 
-/*#me_pic_color{
-    display: none;
-}
-*/
-/*#me_pic:hover{
-    display: none;
-}
-
-#me_pic_color:hover{
-    display: block;
-}*/
-
 .caption{
     padding-top: 10px;
     font-size: 30px;
@@ -133,10 +120,28 @@ h2{
     padding-left: 25px;
 }
 
-#class_pic:hover {
-    background: url("pics/life_pic1.jpg") no-repeat;
-}
 
 #pic_travel{
     padding-right: 25px;
+}
+
+a.nav-link:link
+{
+   color: #000000;
+   text-decoration: none;
+}
+a.nav-link:visited
+{
+   color: #000000;
+   text-decoration: none;
+}
+a.nav-link:hover
+{
+   color: #000000;
+   text-decoration: none;
+}
+a.nav-link:active
+{
+   color: #000000;
+   text-decoration: none;
 }
