--- a/SanPedro/Pages/Home/CSS/stylesheet.css
+++ b/SanPedro/Pages/Home/CSS/stylesheet.css
@@ -6,6 +6,7 @@ padding:0;
 /* Add a black background color to the top navigation */
 .topnav {
     overflow: hidden;
+    background-color: #333;
 }
 
 #myTopnav{
