--- a/Pages/photography/CSS/stylesheet_photo.css
+++ b/Pages/photography/CSS/stylesheet_photo.css
@@ -82,7 +82,17 @@ padding:0;
 
 .grid-sizer,
 .grid-item {
-  width: 200px;
+  width: calc(100%/3);
 }
+
+.grid-item {
+  float: left;
+}
+
+.grid-item img {
+  display: block;
+  width: 100%;
+}
+
 
 .grid-item--width2 { width: 40%; }
