--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -570,7 +570,7 @@ i {
       rgba(0, 0, 0, 0),
       rgba(0, 0, 0, 0.6)
     ),
-    url("Images/my_travels/great_wall_web_bright.jpg");    background-size: cover;
+    url("Images/my_travels/great_wall_web_bright.JPG");    background-size: cover;
     background-position: center center;
 
 }
@@ -610,7 +610,7 @@ i {
       rgba(0, 0, 0, 0),
       rgba(0, 0, 0, 0.6)
     ),
-    url("Images/my_travels/nepal_web_bright.jpg");    background-size: cover;
+    url("Images/my_travels/nepal_web_bright.JPG");    background-size: cover;
     background-position: center center;
 
 }
